5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4482/executions/1594_1800.log
== TEST (2019-03-30 17:25:10) 
-- CODE:
(5*+6*+7*)
5+6+7
AUX<-VAR5
VAR<-VAR6
AUX<-VAR7
-- ERROR:
File "XXXX", line 1
    (5*+6*+7*)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 17:25:29) 
-- CODE:
(5*+6*+7*)
5+6+7

-- EXECUTION TIME:
0.156034
-- ERROR:
  File "/home/codebench/codes/1594/1800/main.py", line 1
    (5*+6*+7*)
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:01:13) 
-- CODE:
x = (5*+6*+7*)
y = 5+6+7
print(round(x))
print(round(y))

-- ERROR:
File "XXXX", line 1
    x = (5*+6*+7*)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:01:24) 
-- CODE:
x = (5*+6*+7)
y = 5+6+7
print(round(x))
print(round(y))

-- OUTPUT:
210
18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:01:33) 
-- CODE:
x = (5*+6*+7)
y = 5+6+7
print(round(x))
print(round(y))
-- OUTPUT:
210
18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:07:32) 
-- CODE:
a= int(input("digite a variavel: "))
b= int(input("digite a variavel: "))
c= int(input("digite a variavel: "))
x= a**2 + b**2 + c**2
y= a+b+c
w= x/y
print(round(w,10))


-- EXECUTION TIME:
0.174927
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203046
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509433962
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:07:35) 
-- CODE:
a= int(input("digite a variavel: "))
b= int(input("digite a variavel: "))
c= int(input("digite a variavel: "))
x= a**2 + b**2 + c**2
y= a+b+c
w= x/y
print(round(w,10))


-- OUTPUT:
25.6666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:07:54) 
-- CODE:
a= int(input("digite a variavel: "))
b= int(input("digite a variavel: "))
c= int(input("digite a variavel: "))
x= a**2 + b**2 + c**2
y= a+b+c
w= x/y
print(round(w,7))


-- EXECUTION TIME:
0.166234
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:08:07) 
-- CODE:
a= int(input("digite a variavel: "))
b= int(input("digite a variavel: "))
c= int(input("digite a variavel: "))
x= a**2 + b**2 + c**2
y= a+b+c
w= x/y
print(round(w,7))


-- EXECUTION TIME:
0.18541
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
